@@ -256,6 +256,11 @@ extern u8g_dev_t u8g_dev_uc1611_dogm240_i2c;
 extern u8g_dev_t u8g_dev_uc1611_dogm240_hw_spi;
 extern u8g_dev_t u8g_dev_uc1611_dogm240_sw_spi;
 
+/* EA DOGXL 240 */
+extern u8g_dev_t u8g_dev_uc1611_dogxl240_i2c;
+extern u8g_dev_t u8g_dev_uc1611_dogxl240_hw_spi;
+extern u8g_dev_t u8g_dev_uc1611_dogxl240_sw_spi;
+
 /* Display: Topway LM6059 128x64 (Adafruit) */
 extern u8g_dev_t u8g_dev_st7565_lm6059_sw_spi;
 extern u8g_dev_t u8g_dev_st7565_lm6059_hw_spi;
